<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    >
    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/main_gray">
        <TextView
            android:id="@+id/tv_mainpager"
            android:layout_width="0dp"
            android:layout_height="@dimen/main_height"
            android:layout_weight="1"
            android:text="@string/main_mainpager"
            android:textAllCaps="false"
            android:gravity="center"

            android:drawableTop="@drawable/textview_select_patient"/>
        <TextView
            android:id="@+id/tv_onlineclinic"
            android:layout_width="0dp"
            android:layout_height="@dimen/main_height"
            android:layout_weight="1"
            android:text="@string/main_onLineClinic"
            android:textAllCaps="false"
            android:gravity="center"

            android:drawableTop="@drawable/textview_select_patient"/>
        <TextView
            android:id="@+id/tv_circleoffriends"
            android:layout_width="0dp"
            android:layout_height="@dimen/main_height"
            android:layout_weight="1"
            android:text="@string/main_circleoffriends"
            android:textAllCaps="false"
            android:gravity="center"
            android:drawableTop="@drawable/textview_select_patient"/>
        <TextView
            android:id="@+id/tv_shoppingmall"
            android:layout_width="0dp"
            android:layout_height="@dimen/main_height"
            android:layout_weight="1"
            android:text="@string/main_shoppingMall"
            android:textAllCaps="false"
            android:gravity="center"

            android:drawableTop="@drawable/textview_select_patient"/>
        <TextView
            android:id="@+id/tv_personalcenter"
            android:layout_width="0dp"
            android:layout_height="@dimen/main_height"
            android:layout_weight="1"
            android:text="@string/main_personalcenter"
            android:textAllCaps="false"
            android:gravity="center"
            android:drawableTop="@drawable/textview_select_patient"/>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/main_framelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_main"></FrameLayout>
</RelativeLayout>