<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:background="@color/main_white"
    >
    <android.support.v7.widget.CardView
        android:id="@+id/login_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/main_height"
        android:layout_marginLeft="@dimen/main_height"
        android:layout_marginRight="@dimen/main_height"
        android:layout_marginTop="@dimen/main_image_size"
        app:cardCornerRadius="20dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/main_image_size"
                android:layout_height="@dimen/main_image_size"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/main_height"
                android:src="@drawable/header_icon_2" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_height"
                android:layout_marginLeft="@dimen/main_height"
                android:layout_marginRight="@dimen/main_height"
                android:layout_marginTop="@dimen/main_height"
                android:background="@drawable/editsharp"
                android:textColor="@color/main_gray"
                android:hint="@string/login_name"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_height"
                android:layout_marginLeft="@dimen/main_height"
                android:layout_marginRight="@dimen/main_height"
                android:layout_marginTop="20dp"
                android:background="@drawable/editsharp"
                android:textColor="@color/main_gray"
                android:hint="@string/login_password"/>

            <TextView
                android:id="@+id/tv_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/main_fragment_name"
                android:text="@string/main_forget_password" />

            <Button
                android:id="@+id/bt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/main_height"
                android:layout_marginRight="@dimen/main_height"
                android:layout_marginTop="@dimen/main_fragment_name"
                android:background="@drawable/button_login_shape"
                android:text="@string/main_login"
                android:textColor="@color/main_white"
                android:layout_marginBottom="@dimen/main_height"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_new_user"
        android:layout_below="@id/login_cardView"
        android:layout_centerHorizontal="true"
        android:textColor="@color/main_gray"/>
    <TextView
        android:id="@+id/tv_forget_password1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_forget_password1"
        android:layout_below="@id/tv_register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/main_fragment_name"/>
</RelativeLayout>