<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RetrieveThePasswordActivity">
    <android.support.v7.widget.CardView
        android:id="@+id/login_cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/main_image_size"
        android:layout_marginLeft="@dimen/main_height"
        android:layout_marginRight="@dimen/main_height"
        android:layout_marginTop="@dimen/main_image_size"
        app:cardCornerRadius="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/main_fragment_name"
                android:layout_gravity="center_horizontal"
                android:text="@string/retrieve_the_password"
                android:layout_marginTop="@dimen/main_height"/>
            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_height"
                android:layout_marginLeft="@dimen/main_height"
                android:layout_marginRight="@dimen/main_height"
                android:layout_marginTop="@dimen/main_height"
                android:background="@drawable/editsharp"
                android:textColor="@color/main_gray"
                android:hint="@string/retrieve_phone"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_height"
                android:layout_marginLeft="@dimen/main_height"
                android:layout_marginRight="@dimen/main_height"
                android:layout_marginTop="@dimen/main_height"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/et_yanzhenng"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:background="@drawable/editsharp"
                    android:textColor="@color/main_gray"
                    android:layout_marginRight="5dp"
                    android:hint="@string/retrieve_yanzheng"/>
                <Button
                    android:id="@+id/bt_retrieve_yanzheng"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:text="@string/retrieve_Verification_Code"/>
            </LinearLayout>
            <Button
                android:id="@+id/bt_retrieve_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/main_height"
                android:layout_marginRight="@dimen/main_height"
                android:layout_marginTop="@dimen/main_height"
                android:background="@drawable/button_login_shape"
                android:text="@string/retrieve_next"
                android:textColor="@color/main_white"
                android:layout_marginBottom="@dimen/main_height"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>