<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SelectAgeActivity"
    android:orientation="vertical">
    <include layout="@layout/toplayout"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_height"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/main_fragment_name"
        android:layout_marginTop="@dimen/main_height"
        android:textColor="@color/cyan"/>

    <ImageView
        android:layout_width="@dimen/main_image_size"
        android:layout_height="@dimen/main_image_size"
        android:src="@drawable/header_icon_2"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/main_height"/>
    <TextView
        android:id="@+id/tv_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_height"
        android:text="1990年2月1日"
        android:textSize="@dimen/main_radius"
        android:layout_gravity="center_horizontal"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_size">
        <comvoice.example.zhangbin.memberversiondemo.view.RulerView
            android:id="@+id/ruler_time"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ruler_size"
            app:alphaEnable="true"
            app:lineColor="@color/main_gray"
            app:lineMaxHeight="40dp"
            app:lineMidHeight="30dp"
            app:lineMinHeight="20dp"
            app:lineSpaceWidth="10dp"
            app:lineWidth="2dip"
            app:textColor="@color/black"
            app:minValue="80.0"
            app:maxValue="250.0"
            app:perValue="1"
            />
        <ImageView
            android:layout_width="14.0dip"
            android:layout_height="46.0dip"
            android:layout_centerHorizontal="true"
            android:scaleType="fitXY"
            android:src="@drawable/user_info_ruler_height"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/main_height"
        android:layout_marginLeft="@dimen/main_fragment_name"
        android:layout_marginRight="@dimen/main_fragment_name">
        <Button
            android:id="@+id/bt_return"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sex_return"
            android:layout_marginRight="@dimen/top_size"
            android:background="@drawable/button_sex_shape"
            android:textColor="@color/cyan"/>
        <Button
            android:id="@+id/bt_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/retrieve_next"
            android:layout_marginLeft="@dimen/top_size"
            android:background="@drawable/button_sex_shape"
            android:textColor="@color/cyan"/>
    </LinearLayout>
</LinearLayout>